<package>
  <name>nao_human</name>
  <version>0.1.0</version>
  <description>
    <p>
        This package provides a node that track humans based on face recognition and sound, and publishes
        an estimate of human locations as TF frames
    </p>
  </description>
  <maintainer email="severin.lemaignan@epfl.ch">Séverin Lemaignan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nao_human</url>
  <author>Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostf</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
